--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <center>
     <h1 class="btn btn-info heading">Object Detection</h1>
     <h3 id="status" class="btn btn-danger"></h3>
+    <br>
+    <h3 id="number_of_objects" class="btn btn-warning"></h3>
+    <br>
   </center>
 
   <script src="main.js"></script>
